// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<RhelGraphCard
  endDate={2019-07-20T00:00:00.000Z}
  error={false}
  fulfilled={false}
  getGraphReports={[Function]}
  graphData={
    Object {
      "usage": Array [],
    }
  }
  graphGranularity="daily"
  pending={false}
  startDate={2019-06-20T00:00:00.000Z}
  t={[Function]}
>
  <Card
    className="curiosity-usage-graph fadein"
  >
    <article
      className="pf-c-card curiosity-usage-graph fadein"
    >
      <CardHead>
        <div
          className="pf-c-card__head"
        >
          <h2>
            CPU socket usage
          </h2>
          <CardActions>
            <div
              className="pf-c-card__actions"
            >
              <Select
                aria-label="Select date range"
                ariaLabel="Select option"
                className=""
                id="generatedid-"
                isDisabled={false}
                name={null}
                onSelect={[Function]}
                options={
                  Array [
                    Object {
                      "title": "Daily",
                      "value": "daily",
                    },
                    Object {
                      "title": "Weekly",
                      "value": "weekly",
                    },
                    Object {
                      "title": "Monthly",
                      "value": "monthly",
                    },
                    Object {
                      "title": "Quarterly",
                      "value": "quarterly",
                    },
                  ]
                }
                placeholder="Select date range"
                selectedOptions="daily"
                variant="single"
              >
                <Select
                  aria-label="Select option"
                  ariaLabelClear="Clear all"
                  ariaLabelRemove="Remove"
                  ariaLabelToggle="Options menu"
                  ariaLabelTypeAhead=""
                  ariaLabelledBy=""
                  className="curiosity-select "
                  isExpanded={false}
                  isGrouped={false}
                  isPlain={false}
                  onClear={[Function]}
                  onSelect={[Function]}
                  onToggle={[Function]}
                  placeholderText="Select date range"
                  selections="Daily"
                  toggleId={null}
                  variant="single"
                  width=""
                >
                  <div
                    className="pf-c-select curiosity-select "
                    style={
                      Object {
                        "width": "",
                      }
                    }
                  >
                    <SelectToggle
                      ariaLabelToggle="Options menu"
                      ariaLabelledBy=" pf-toggle-id-2"
                      className=""
                      handleTypeaheadKeys={[Function]}
                      id="pf-toggle-id-2"
                      isActive={false}
                      isExpanded={false}
                      isFocused={false}
                      isHovered={false}
                      isPlain={false}
                      onClose={[Function]}
                      onEnter={[Function]}
                      onToggle={[Function]}
                      parentRef={
                        Object {
                          "current": <div
                            class="pf-c-select curiosity-select "
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-labelledby=" pf-toggle-id-2"
                              class="pf-c-select__toggle"
                              id="pf-toggle-id-2"
                              type="button"
                            >
                              <div
                                class="pf-c-select__toggle-wrapper"
                              >
                                <span
                                  class="pf-c-select__toggle-text"
                                >
                                  Daily
                                </span>
                              </div>
                              <svg
                                aria-hidden="true"
                                class="pf-c-select__toggle-arrow"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style="vertical-align: -0.125em;"
                                viewBox="0 0 320 512"
                                width="1em"
                              >
                                <path
                                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                  transform=""
                                />
                              </svg>
                            </button>
                          </div>,
                        }
                      }
                      type="button"
                      variant="single"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        aria-labelledby=" pf-toggle-id-2"
                        className="pf-c-select__toggle"
                        id="pf-toggle-id-2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <div
                          className="pf-c-select__toggle-wrapper"
                        >
                          <span
                            className="pf-c-select__toggle-text"
                          >
                            Daily
                          </span>
                        </div>
                        <CaretDownIcon
                          className="pf-c-select__toggle-arrow"
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                          title={null}
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            className="pf-c-select__toggle-arrow"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 320 512"
                            width="1em"
                          >
                            <path
                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                              transform=""
                            />
                          </svg>
                        </CaretDownIcon>
                      </button>
                    </SelectToggle>
                  </div>
                </Select>
              </Select>
            </div>
          </CardActions>
        </div>
      </CardHead>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <div
            className="curiosity-skeleton-container"
          />
        </div>
      </CardBody>
    </article>
  </Card>
</RhelGraphCard>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "data": Array [
        Object {
          "tooltip": "5 t('curiosity-graph.tooltipSockets') Jun 1",
          "x": 0,
          "xAxisLabel": "Jun 1",
          "y": 5,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 2
 -5 t('curiosity-graph.tooltipPreviousLabelDaily')",
          "x": 1,
          "xAxisLabel": "Jun 2",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 3",
          "x": 2,
          "xAxisLabel": "Jun 3",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 4",
          "x": 3,
          "xAxisLabel": "Jun 4",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 5",
          "x": 4,
          "xAxisLabel": "Jun 5",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 6",
          "x": 5,
          "xAxisLabel": "Jun 6",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 7",
          "x": 6,
          "xAxisLabel": "Jun 7",
          "y": 0,
        },
        Object {
          "tooltip": "7 t('curiosity-graph.tooltipSockets') Jun 8
 +7 t('curiosity-graph.tooltipPreviousLabelDaily')",
          "x": 7,
          "xAxisLabel": "Jun 8",
          "y": 7,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 9
 -7 t('curiosity-graph.tooltipPreviousLabelDaily')",
          "x": 8,
          "xAxisLabel": "Jun 9",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 10",
          "x": 9,
          "xAxisLabel": "Jun 10",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 11",
          "x": 10,
          "xAxisLabel": "Jun 11",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 12",
          "x": 11,
          "xAxisLabel": "Jun 12",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 13",
          "x": 12,
          "xAxisLabel": "Jun 13",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 14",
          "x": 13,
          "xAxisLabel": "Jun 14",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 15",
          "x": 14,
          "xAxisLabel": "Jun 15",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 16",
          "x": 15,
          "xAxisLabel": "Jun 16",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 17",
          "x": 16,
          "xAxisLabel": "Jun 17",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 18",
          "x": 17,
          "xAxisLabel": "Jun 18",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 19",
          "x": 18,
          "xAxisLabel": "Jun 19",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 20",
          "x": 19,
          "xAxisLabel": "Jun 20",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 21",
          "x": 20,
          "xAxisLabel": "Jun 21",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 22",
          "x": 21,
          "xAxisLabel": "Jun 22",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 23",
          "x": 22,
          "xAxisLabel": "Jun 23",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 24",
          "x": 23,
          "xAxisLabel": "Jun 24",
          "y": 0,
        },
        Object {
          "tooltip": "3 t('curiosity-graph.tooltipSockets') Jun 25
 +3 t('curiosity-graph.tooltipPreviousLabelDaily')",
          "x": 24,
          "xAxisLabel": "Jun 25",
          "y": 3,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 26
 -3 t('curiosity-graph.tooltipPreviousLabelDaily')",
          "x": 25,
          "xAxisLabel": "Jun 26",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 27",
          "x": 26,
          "xAxisLabel": "Jun 27",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 28",
          "x": 27,
          "xAxisLabel": "Jun 28",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 29",
          "x": 28,
          "xAxisLabel": "Jun 29",
          "y": 0,
        },
        Object {
          "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 30",
          "x": 29,
          "xAxisLabel": "Jun 30",
          "y": 0,
        },
      ],
      "legendData": Object {
        "name": "t('curiosity-graph.legendSocketsLabel')",
      },
      "legendThreshold": Object {
        "name": "t('curiosity-graph.legendSocketsThresholdLabel')",
      },
      "thresholds": Array [],
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <ChartArea
        dataSets={
          Array [
            Object {
              "data": Array [
                Object {
                  "tooltip": "5 t('curiosity-graph.tooltipSockets') Jun 1",
                  "x": 0,
                  "xAxisLabel": "Jun 1",
                  "y": 5,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 2
 -5 t('curiosity-graph.tooltipPreviousLabelDaily')",
                  "x": 1,
                  "xAxisLabel": "Jun 2",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 3",
                  "x": 2,
                  "xAxisLabel": "Jun 3",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 4",
                  "x": 3,
                  "xAxisLabel": "Jun 4",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 5",
                  "x": 4,
                  "xAxisLabel": "Jun 5",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 6",
                  "x": 5,
                  "xAxisLabel": "Jun 6",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 7",
                  "x": 6,
                  "xAxisLabel": "Jun 7",
                  "y": 0,
                },
                Object {
                  "tooltip": "7 t('curiosity-graph.tooltipSockets') Jun 8
 +7 t('curiosity-graph.tooltipPreviousLabelDaily')",
                  "x": 7,
                  "xAxisLabel": "Jun 8",
                  "y": 7,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 9
 -7 t('curiosity-graph.tooltipPreviousLabelDaily')",
                  "x": 8,
                  "xAxisLabel": "Jun 9",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 10",
                  "x": 9,
                  "xAxisLabel": "Jun 10",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 11",
                  "x": 10,
                  "xAxisLabel": "Jun 11",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 12",
                  "x": 11,
                  "xAxisLabel": "Jun 12",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 13",
                  "x": 12,
                  "xAxisLabel": "Jun 13",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 14",
                  "x": 13,
                  "xAxisLabel": "Jun 14",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 15",
                  "x": 14,
                  "xAxisLabel": "Jun 15",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 16",
                  "x": 15,
                  "xAxisLabel": "Jun 16",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 17",
                  "x": 16,
                  "xAxisLabel": "Jun 17",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 18",
                  "x": 17,
                  "xAxisLabel": "Jun 18",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 19",
                  "x": 18,
                  "xAxisLabel": "Jun 19",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 20",
                  "x": 19,
                  "xAxisLabel": "Jun 20",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 21",
                  "x": 20,
                  "xAxisLabel": "Jun 21",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 22",
                  "x": 21,
                  "xAxisLabel": "Jun 22",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 23",
                  "x": 22,
                  "xAxisLabel": "Jun 23",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 24",
                  "x": 23,
                  "xAxisLabel": "Jun 24",
                  "y": 0,
                },
                Object {
                  "tooltip": "3 t('curiosity-graph.tooltipSockets') Jun 25
 +3 t('curiosity-graph.tooltipPreviousLabelDaily')",
                  "x": 24,
                  "xAxisLabel": "Jun 25",
                  "y": 3,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 26
 -3 t('curiosity-graph.tooltipPreviousLabelDaily')",
                  "x": 25,
                  "xAxisLabel": "Jun 26",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 27",
                  "x": 26,
                  "xAxisLabel": "Jun 27",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 28",
                  "x": 27,
                  "xAxisLabel": "Jun 28",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 29",
                  "x": 28,
                  "xAxisLabel": "Jun 29",
                  "y": 0,
                },
                Object {
                  "tooltip": "0 t('curiosity-graph.tooltipSockets') Jun 30",
                  "x": 29,
                  "xAxisLabel": "Jun 30",
                  "y": 0,
                },
              ],
              "legendData": Object {
                "name": "t('curiosity-graph.legendSocketsLabel')",
              },
              "legendThreshold": Object {
                "name": "t('curiosity-graph.legendSocketsThresholdLabel')",
              },
              "thresholds": Array [],
            },
          ]
        }
        domain={Object {}}
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        xAxisFixLabelOverlap={true}
        xAxisLabelIncrement={5}
        xAxisTickFormat={null}
        yAxisFixLabelOverlap={false}
        yAxisLabelIncrement={1}
        yAxisTickFormat={[Function]}
      />
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Skeleton
        size="xs"
      />
      <Skeleton
        size="sm"
      />
      <Skeleton
        size="md"
      />
      <Skeleton
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
